Review Request 8417 separate jetty and functional